Refactor TaskController and JWT token logic

--- a/appsettings.json
+++ b/appsettings.json
@@ -17,6 +17,11 @@
     "Username": "e1a459eb8a3dfb7ce0ebd62e98a9d5a5",
     "Password": "d685e8ae23703724a4e6167ee32017ff"
   },
-  "FrontendUrl": "https://localhost:7062"
+  "FrontendUrl": "https://localhost:7062",
+  "Jwt": {
+    "Key": "fT4vPz@kD9!mXcLw#rU7eHq2Tz$Bn1Yg",
+    "Issuer": "UniCodeAPI",
+    "Audience": "UniCodeAPI"
+  }
 
 }
