--- a/UniCodeProject.API.csproj
+++ b/UniCodeProject.API.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="EasyData.AspNetCore" Version="1.5.9" />
     <PackageReference Include="EasyData.EntityFrameworkCore.Relational" Version="1.5.9" />
+    <PackageReference Include="EPPlus" Version="6.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
